@@ -8,6 +8,8 @@ Version 2.3
 
 (bugfix release, release date to be decided)
 
+- Fixed an incorrectly formatted help record for count options.'
+
 Version 2.2
 -----------
 
